# dosta-kafka-consumer

./: .example.pypirc  .gitignore  pyproject.toml  requirements.txt  setup.cfg
src/: consumer.py  exceptions.py  manager.py
src/handlers/: base.py
